# codex-session-patcher

./: .gitignore  README.md  README_EN.md  codex_patcher.py  pyproject.toml
codex_session_patcher/: __init__.py  cli.py  output.py
codex_session_patcher/core/: constants.py  patcher.py
codex_session_patcher/ctf_config/: installer.py  status.py  templates.py
codex_session_patcher/ctf_config/prompts/: claude_code_ctf_optimized.md  opencode_ctf_optimized.md
docs/: DESIGN.md
scripts/: web-common.sh
services/muggle-leads/migrations/: 0004_widen_ad_slots.sql
services/muggle-leads/src/: ad-model.js
tests/: test_ai_api_error_handling.py  test_ctf_prompt.py  test_patcher.py  test_safe_output.py  test_web_scripts.py  test_web_version.py
web/backend/: __init__.py  ai_service.py  api.py  main.py  prompt_rewriter.py  schemas.py
web/frontend/src/: App.vue
web/frontend/src/components/: PromptEnhancePanel.vue
web/frontend/src/locales/: en-US.js  zh-CN.js
web/frontend/src/stores/: ctfStore.js
web/frontend/src/styles/: theme.css
